cynic-querygen/tests/snapshots/starwars_tests__bare_selection_sets.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "document_to_fragment_structs(query, schema,\n                             &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod queries {
    use super::{query_dsl, types::*};

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Root")]
    pub struct UnnamedQuery {
        pub allFilms: Option<FilmsConnection>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "FilmsConnection")]
    pub struct FilmsConnection {
        pub films: Option<Vec<Option<Film>>>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Film")]
    pub struct Film {
        pub id: cynic::Id,
        pub title: Option<String>,
    }

}

#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod types {
}

mod query_dsl{
    use super::types::*;
    cynic::query_dsl!("schema.graphql");
}

