cynic-querygen/tests/snapshots/starwars_tests__float.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::schema_for_derives(
    file = r#"schema.graphql"#,
    module = "schema",
)]
mod queries {
    use super::schema;

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Root")]
    pub struct UnnamedQuery {
        pub all_people: Option<PeopleConnection>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    pub struct PeopleConnection {
        pub people: Option<Vec<Option<Person>>>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    pub struct Person {
        pub mass: Option<f64>,
    }

}

#[allow(non_snake_case, non_camel_case_types)]
mod schema {
    cynic::use_schema!(r#"schema.graphql"#);
}


