cynic-querygen/tests/snapshots/starwars_tests__sanity_test_starwars_query.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "document_to_fragment_structs(query, schema,\n                             &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod queries {
    use super::{query_dsl, types::*};

    #[derive(cynic::FragmentArguments, Debug)]
    pub struct SanityCheckQueryArguments {
        pub film_id: Option<cynic::Id>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Root", argument_struct = "SanityCheckQueryArguments")]
    pub struct SanityCheckQuery {
        #[arguments(id = &args.film_id)]
        pub film: Option<Film>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Film")]
    pub struct Film {
        pub title: Option<String>,
        pub director: Option<String>,
    }

}

#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod types {
}

mod query_dsl{
    use super::types::*;
    cynic::query_dsl!("schema.graphql");
}

