cynic-querygen/tests/snapshots/starwars_tests__skip.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryVariables, Debug)]
pub struct SkipTestVariables<'a> {
    pub film_id: &'a cynic::Id,
    pub skip_title: bool,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Root", variables = "SkipTestVariables")]
pub struct SkipTest {
    #[arguments(id: $film_id)]
    pub film: Option<Film>,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(variables = "SkipTestVariables")]
pub struct Film {
    #[directives(skip(if: $skip_title))]
    pub title: Option<String>,
    pub director: Option<String>,
}
